# bsky-monitor

./: .gitignore  README.md  app.py  pyproject.toml  wsgi.py
templates/: index.html
