[project]
name = "bsky-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-sock>=0.7.0",
    "flask>=3.1.0",
    "python-dateutil>=2.9.0.post0",
    "websockets>=14.1",
    "gunicorn>=21.2.0",
    "gevent>=24.11.1",
]
